# tct-trs-gubs

./: LICENSE  README.md  stack.yaml  tct-trs-gubs.cabal
app/: Main.hs
src/Tct/Trs/Processor/Poly/: GUBS.hs
